// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleList when there is NOT a transaction when there is NOT an api failure when there are NO items in the list should match the snapshot on file (styles) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c3 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding-top: 0px;
}

.c3 li:last-child {
  margin-bottom: 0px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  min-height: 40px;
  background: #FFFFFF;
  padding: 12px;
  min-width: 220px;
  color: #006600;
  margin-bottom: 0px;
}

.c0 {
  margin-top: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c0 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

<div>
  <div
    class="c0"
  >
    <div>
      MockPagination
    </div>
    <div
      class="c1"
    >
      <div>
        MockBanner
      </div>
      <div
        class="c2 overflow-auto"
        size="200"
      >
        <div
          class="c3"
        >
          <li
            class="c4"
          >
            Holding a Place
          </li>
        </div>
      </div>
    </div>
    <div>
      MockAlert
    </div>
    <div>
      MockHelp
    </div>
  </div>
</div>
`;

exports[`SimpleList when there is NOT a transaction when there is NOT an api failure when there are items in the list should match the snapshot on file (styles) 1`] = `<div />`;

exports[`SimpleList when there is NOT a transaction when there is NOT an api failure when there are items in the list when an API authentication error occurs should match the snapshot on file (styles) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c3 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding-top: 0px;
}

.c3 li:last-child {
  margin-bottom: 0px;
}

.c0 {
  margin-top: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c0 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

<div>
  <div
    class="c0"
  >
    <div>
      MockPagination
    </div>
    <div
      class="c1"
    >
      <div>
        MockBanner
      </div>
      <div
        class="c2 overflow-auto"
        size="200"
      >
        <div
          class="c3"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
    <div>
      MockAlert
    </div>
    <div>
      MockHelp
    </div>
  </div>
</div>
`;

exports[`SimpleList when there is NOT a transaction when there is NOT an api failure when there are items in the list when the page does NOT have a pagination reference should match the snapshot on file (styles) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c3 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding-top: 0px;
}

.c3 li:last-child {
  margin-bottom: 0px;
}

.c0 {
  margin-top: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c0 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

<div>
  <div
    class="c0"
  >
    <div>
      MockPagination
    </div>
    <div
      class="c1"
    >
      <div>
        MockBanner
      </div>
      <div
        class="c2 overflow-auto"
        size="200"
      >
        <div
          class="c3"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
    <div>
      MockAlert
    </div>
    <div>
      MockHelp
    </div>
  </div>
</div>
`;

exports[`SimpleList when there is NOT a transaction when there is NOT an api failure when there are items in the list when the page has a pagination reference should match the snapshot on file (styles) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c3 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding-top: 0px;
}

.c3 li:last-child {
  margin-bottom: 0px;
}

.c0 {
  margin-top: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c0 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

<div>
  <div
    class="c0"
  >
    <div>
      MockPagination
    </div>
    <div
      class="c1"
    >
      <div>
        MockBanner
      </div>
      <div
        class="c2 overflow-auto"
        size="200"
      >
        <div
          class="c3"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
    <div>
      MockAlert
    </div>
    <div>
      MockHelp
    </div>
  </div>
</div>
`;

exports[`SimpleList when there is a transaction should match the snapshot on file (styles) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c3 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding-top: 0px;
}

.c3 li:last-child {
  margin-bottom: 0px;
}

.c0 {
  margin-top: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c0 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

<div>
  <div
    class="c0"
  >
    <div>
      MockPagination
    </div>
    <div
      class="c1"
    >
      <div>
        MockBanner
      </div>
      <div
        class="c2 overflow-auto"
        size="200"
      >
        <div
          class="c3"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
    <div>
      MockAlert
    </div>
    <div>
      MockHelp
    </div>
  </div>
</div>
`;
